# FFmpegDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/xl/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegPlay.cpp  FFmpegPlay.h  JNICallBackHelper.cpp  JNICallBackHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: file.h  frame.h
app/src/main/java/com/xl/ffmpeg/: MainActivity.java
app/src/main/java/com/xl/ffmpeg/play/: FFmpegPlay.java  OnPerpareListener.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xl/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
